fixed fillparam opacity not aligned

--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -229,10 +229,10 @@
 #licenseWatermark
 {
     position:    absolute;
-    left:        36px;
-    top:         110px;
-    width:       174px;
-    height:      28px;
+    left:        -3px;
+    top:         56px;
+    width:       256px;
+    height:      50px;
     padding-top: 4px;
     overflow:    hidden;
 }
@@ -242,9 +242,9 @@
 {
     font-family:   'Inter';
     font-size:      11px;
-    font-weight:    400;
+    font-weight:    200;
 
-    width:          150px;
+    width:          170px;
     height:         24px;
     padding-top:    4px;
     padding-bottom: 0;
@@ -255,7 +255,7 @@
 
     position:       absolute;
     left:           calc(50%);
-    top:            114px;
+    top:            81px;
 
     transform:      translateX(-50%);
 
